# weatherart

./: .env.example  .gitignore  README.md  config.py  image_generation.py  logging_utils.py  main.py  prompts.yaml  push_image.py  pyproject.toml  remove_today.py  tv_utils.py  weather_mocks.yaml
